# airg-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
one/: data.json  script.py  test.py
three/: script.py  test.py
two/: script.py  test.py
